--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "demo",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@raozi83/r-input",
+  "version": "0.1.4",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "package": "vue-cli-service build --target lib --name Rinput ./src/components/index.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "node-sass": "^4.14.1",
+    "sass": "^1.26.8",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
@@ -18,8 +21,11 @@
     "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
+    "css-loader": "^3.5.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -40,5 +46,9 @@
     "> 1%",
     "last 2 versions",
     "not dead"
+  ],
+  "main": "./dist/Rinput.common.js",
+  "files": [
+    "dist/*"
   ]
 }
